--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -8,7 +8,9 @@
   <% @articles.each do |article| %>
     <%= render article %>
     <p>
-      <%= link_to "Show this article", article %>
+      <%= link_to "Show this article", [:admin, article] %>
     </p>
   <% end %>
 </div>
+
+<%= link_to "New article", new_admin_article_path %>
