feat: Authentication for admin

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,7 @@
 <% content_for :title, "Articles" %>
 <div class="bg-purple-600">
   <div class="h-100">
-    <span>
-    </span>
+    <%# <%= image_tag "banner.jpg", alt: "Example Image", class: "w-full h-full object-cover" %>
   </div>
   <div class="bg-amber-100 p-5 mt-10">
     <div>
