--- a/app/views/admin/articles/_form.html.erb
+++ b/app/views/admin/articles/_form.html.erb
@@ -18,6 +18,10 @@
     <%= form.textarea :description %>
   </div>
   <div>
+    <%= form.label :cover_image, style: "display: block" %>
+    <%= form.file_field :cover_image %>
+  </div>
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
