--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,8 +1,22 @@
 <% content_for :title, "Editing article" %>
-<h1>Editing article</h1>
-<%= render "form", article: @article %>
-<br>
-<div>
-  <%= link_to "Show this article", [:admin, @article] %> |
-  <%= link_to "Back to articles", admin_articles_path %>
+<div class="bg-sky-50 min-h-screen py-10">
+  <div class="max-w-lg mx-auto p-6 bg-white rounded-lg shadow-md">
+    <h1 class="text-4xl font-extrabold text-sky-700 mb-8 text-center">Editing article</h1>
+    <%= render "form", article: @article %>
+    <div class="mt-8 text-center flex justify-center space-x-4">
+      <%= link_to [:admin, @article],
+          class: "inline-flex items-center px-5 py-2 border border-sky-600 text-sky-600 font-semibold rounded-lg 
+                 hover:bg-sky-600 hover:text-white transition-colors duration-300 shadow-md hover:shadow-lg" do %>
+        Show this article
+      <% end %>
+      <%= link_to admin_articles_path,
+          class: "inline-flex items-center px-5 py-2 border border-sky-600 text-sky-600 font-semibold rounded-lg 
+                 hover:bg-sky-600 hover:text-white transition-colors duration-300 shadow-md hover:shadow-lg" do %>
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
+        </svg>
+        Back to articles
+      <% end %>
+    </div>
+  </div>
 </div>
