--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -5,14 +5,16 @@
   <div>
     <%= image_tag "banner.jpg", class: "w-full h-150 object-cover" %>
   </div>
-  <% statuses.each do |status| %>
+  <% @statuses.each do |status| %>
     <div class="bg-sky-50 p-5 rounded-lg">
       <div class="flex justify-between items-center">
         <p class="font-bold text-3xl text-gray-800 border-b-6 border-sky-600 inline-block pb-1 capitalize">
           <%= status.humanize %>
         </p>
-        <%= link_to "New article", new_admin_article_path,
-            class: "bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-300" %>
+        <% if status == "draft" %>
+          <%= link_to "New article", new_admin_article_path,
+          class: "bg-sky-600 hover:bg-sky-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-300" %>
+        <% end %>
       </div>
       <div>
         <div id="articles" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-5">
@@ -20,7 +22,7 @@
             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
               <%= image_tag article.cover_image.attached? ? url_for(article.cover_image) : "poster.jpg", class: "w-full h-68 object-cover" %>
               <div class="p-4 flex-grow">
-                <h2 class="text-lg font-bold text-gray-800"><%= article.title %></h2>
+                <h2 class="text-lg font-bold text-gray-800 line-clamp-2"><%= article.title %></h2>
                 <p class="text-gray-600 mt-2 line-clamp-3"><%= truncate(article.description, length: 100) %></p>
               </div>
               <div class="p-4 bg-white">
