--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title, "New article" %>
-<div class="bg-sky-50">
+<div class="bg-sky-50 h-screen flex items-start py-10">
   <div class="max-w-lg mx-auto p-6 bg-white rounded-lg shadow-md">
     <h1 class="text-4xl font-extrabold text-sky-700 mb-8 text-center">New article</h1>
     <%= render "form", article: @article %>
