--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -1,8 +1,11 @@
 <% content_for :title, "New article" %>
-<div class="bg-sky-50 h-screen flex items-start py-10">
-  <div class="max-w-lg mx-auto p-6 bg-white rounded-lg shadow-md">
-    <h1 class="text-4xl font-extrabold text-sky-700 mb-8 text-center">New article</h1>
+
+<div class="min-h-screen flex items-center justify-center bg-gradient-to-br from-sky-100 via-indigo-100 to-pink-100 py-10 px-4">
+  <div class="max-w-lg w-full p-6 bg-white rounded-2xl shadow-xl border border-gray-100">
+    <h1 class="text-4xl font-extrabold text-sky-700 mb-8 text-center">New Article</h1>
+
     <%= render "form", article: @article %>
+
     <div class="mt-8 text-center">
       <%= link_to admin_articles_path,
         class: "inline-flex items-center px-5 py-2 border border-sky-600 text-sky-600 font-semibold rounded-lg 
