--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
           <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition-shadow duration-300 flex flex-col">
             <%= image_tag article.cover_image.attached? ? url_for(article.cover_image) : "poster.jpg", class: "w-full h-68 object-cover" %>
             <div class="p-4 flex-grow">
-              <h2 class="text-lg font-bold text-gray-800 line-clamp-2"><%= article.title %></h2>
+              <h2 class="text-lg font-bold text-gray-800 line-clamp-2" data-testid="article-title"><%= article.title %></h2>
               <p class="text-gray-600 mt-2 line-clamp-3"><%= truncate(article.description, length: 100) %></p>
             </div>
             <div class="p-4 bg-white">
